--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>github</h1>
+    <hr>
+    <input type="text" class="cajita" placeholder="Nombres">
     <script src="js/script.js"></script>
 </body>
 </html>
